# Intellithon-25

./: .gitignore  ADVANCED_FEATURES_ASSESSMENT.md  ALL.md  CHROME_PICKER_GUIDE.md  EXTENSION_FIXED.md  FILES_RESTORED.md  LOAD_EXTENSION_GUIDE.md  QUICK_FIX.txt  QUICK_GUIDE.txt  README.md  README_NEW.md  README_OLD_BACKUP.md  app.js  background.js  content_script.js  dashboard.css  dashboard.html  dashboard.js  database-schema.sql  index (1).html  manifest.json  network_monitor.js  popup-enhanced.css  popup-enhanced.html  popup-enhanced.js  popup.css  popup.html  popup.js  setup_database.sql  style.css
archive/: faq-debug.html  final-faq-test.html  simple-faq-test.html  test-faq.html  test-help-modals.html
backend/: .env.example  Cargo.toml  README.md
backend/migrations/2025-10-10-000001_create_user_analytics/: down.sql  up.sql  up_sqlite.sql  up_sqlite_complete.sql
backend/src/: main.rs
backend/src/crypto/: mod.rs  mod_backup.rs
backend/src/db/: connection.rs  mod.rs  models.rs  models_analytics.rs  schema.rs  schema_analytics.rs  schema_sqlite.rs
backend/src/handlers/: global_stats.rs  health.rs  mod.rs  root.rs  stats.rs  url_check.rs  user_analytics.rs  user_analytics_backup.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: mod.rs
backend/src/services/: cache.rs  geoip.rs  ml_client.rs  mod.rs
backups/: app.js.backup_help_section  dashboard.css
docs/: ALL.md  ALL_COMPONENTS_COMPLETE.md  ALL_FEATURES_COMPLETE.md  API_IS_RUNNING.md  ARCHITECTURE_DIAGRAM.md  BACKEND_IMPLEMENTATION_PLAN.md  BACKEND_TECH_STACK.md  COMPLETE_FIX_GUIDE.md  COMPLETE_TEST_GUIDE.md  CSP_FIXED.md  (+55 more)
(+150 files in other folders)
